err/infi.iscsiapi.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Logbook-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/emport'...
Listing './lib/python3.5/site-packages/emport-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/git_py-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/gitpy'...
Listing './lib/python3.5/site-packages/infi'...
Listing './lib/python3.5/site-packages/infi/dtypes'...
Listing './lib/python3.5/site-packages/infi/dtypes/iqn'...
Listing './lib/python3.5/site-packages/infi/execute'...
Listing './lib/python3.5/site-packages/infi/iscsiapi'...
Listing './lib/python3.5/site-packages/infi/monotonic_time'...
Listing './lib/python3.5/site-packages/infi/os_info'...
Listing './lib/python3.5/site-packages/infi/pkgmgr'...
Listing './lib/python3.5/site-packages/infi/pyutils'...
Listing './lib/python3.5/site-packages/infi/pyutils/functors'...
Listing './lib/python3.5/site-packages/infi/run_as_root'...
Listing './lib/python3.5/site-packages/infi/win32service'...
Compiling './lib/python3.5/site-packages/infi/win32service/service.py'...
***   File "./lib/python3.5/site-packages/infi/win32service/service.py", line 230
    except WindowsError, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/infi.dtypes.iqn-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/infi.execute-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/infi.iscsiapi-0.2.8.egg-info'...
Listing './lib/python3.5/site-packages/infi.monotonic_time-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/infi.os_info-0.1.9.egg-info'...
Listing './lib/python3.5/site-packages/infi.pkgmgr-0.1.15.egg-info'...
Listing './lib/python3.5/site-packages/infi.pyutils-1.1.3.egg-info'...
Listing './lib/python3.5/site-packages/infi.run_as_root-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/infi.win32service-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/logbook'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/munch'...
Listing './lib/python3.5/site-packages/munch-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/packaging'...
Listing './lib/python3.5/site-packages/packaging-16.8.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
